--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+      <a href="https://pypi.org/project/senecalearning/" class="btn">View on PyPI</a>
     </header>
 
     <main id="content" class="main-content" role="main">
